# rocket-rust

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json
.github/: dependabot.yml
.github/workflows/: automerge  docker-build-push.yml  docker-build.yml  rust.yml
src/: main.rs  model.rs
