[package]
authors = ["Anisuzzaman Khan <aniskhan001@yahoo.com>"]
name = "rust-gem"
version = "0.1.0"

[dependencies]
diesel = {version = "2.1.2", features = ["mysql"]}
mysql = "24.0.0"
mysqlclient-sys = "0.2.5"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.10"
rocket_codegen = "0.4.4"
serde = "1.0.193"
serde_derive = "1.0.166"
serde_json = "1.0.108"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "*"
