[package]
authors = ["Anis Khan <aniskhan001@yahoo.com>"]
name = "rust-gem"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version = "2.1.4", features = ["mysql"]}
mysql = "25.0.0"
mysqlclient-sys = "0.4.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = { version = "0.5.1", features = ["json"] }

serde = "1.0.193"
serde_derive = "1.0.166"
